force-app/main/default/objects/ssot__AssetStatePeriod__dlm/fields/ssot__MonthlyRecurringRevenueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MonthlyRecurringRevenueAmount__c</fullName>
    <label>Monthly Recurring Revenue</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MonthlyRecurringRevenueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>